# hashsum

./: Cargo.toml  README.md
.cargo/: config.toml
src/: hash_algorithm.rs  main.rs
src/hash_algorithm/: md5.rs  sha1.rs
